# DeviceSDK

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  settings.json
.cargo/: config.toml.in
cmake/: rust-library.cmake
crates/xrds-audio/: README.md
crates/xrds-components/: README.md
crates/xrds-core/: Cargo.toml  README.md
crates/xrds-graphics/: README.md
crates/xrds-graphics/src/: error.rs  graphics.rs  lib.rs
crates/xrds-internal/: Cargo.toml  build.rs
crates/xrds-internal/src/: lib.rs
crates/xrds-net/: Cargo.toml  README.md
crates/xrds-net/samples/: audio_output.opus
crates/xrds-net/src/: lib.rs  plugin_net_bevy.rs
crates/xrds-openxr/: Cargo.toml  README.md
crates/xrds-openxr/src/: lib.rs
crates/xrds-openxr/src/backends/: d3d12.rs  mod.rs  opengl.rs  vulkan.rs
crates/xrds-openxr/src/openxr/: camera.rs  frame.rs  graphics.rs  helper.rs  init.rs  instance.rs  mod.rs  reference_space.rs  render.rs  resources.rs  schedule.rs  session.rs  swapchain.rs
crates/xrds-openxr/src/openxr/layers/: builder.rs  fb.rs  mod.rs  projection.rs
crates/xrds-openxr/src/windows/: mod.rs
crates/xrds-runtime/: Cargo.toml  README.md
crates/xrds-runtime/src/: lib.rs  runtime.rs
examples/: 2d_bloom.rs  2d_shapes.rs  3d_bloom.rs  3d_shapes.rs  Cargo.toml  README.md  animated_material.rs  atmospheric_fog.rs  custom_skinned_mesh.rs  light_transmission.rs  load_gltf.rs  morph_targets.rs  net.rs  net_bevy.rs  physical_based_rendering.rs  postprocessing_builtin.rs  simple_scene.rs  simple_triangle.rs  simple_update.rs  simple_xr_scene.rs  skybox.rs  spherical_area_lights.rs  split_screen.rs  two_pass.rs  vertex_color.rs
examples/simple_triangle/: Cargo.toml
examples/simple_triangle/src/: main.rs
examples/src/: main.rs
examples/src/gltf_viewer/: mod.rs  program_args.rs
examples/src/simple_triangle/: mod.rs
include/: README.md
src/: lib.rs
xrds/: CMakeLists.txt  Cargo.toml  README.md  build.rs
xrds-audio/: CMakeLists.txt  Cargo.toml  README.md  build.rs
xrds-audio/include/xrds/: audio.h
xrds-audio/src/: audio.rs
xrds-components/: CMakeLists.txt  Cargo.toml  build.rs
xrds-components/include/xrds/: components.h
xrds-core/: CMakeLists.txt  Cargo.toml  README.md  build.rs
xrds-core/include/xrds/: core.h  core.hpp
xrds-core/src/: lib.rs
xrds-core/src/types/: mod.rs  object.rs  resource.rs  transform.rs  world.rs
xrds-graphics/: CMakeLists.txt  Cargo.toml  build.rs
xrds-graphics/include/xrds/: graphics.h
xrds-graphics/src/: constant.rs  error.rs  graphics.rs  lib.rs  types.rs  util.rs
xrds-graphics/src/asset/: mod.rs  server.rs  types.rs
xrds-graphics/src/asset/gltf/: loader.rs  mod.rs
xrds-graphics/src/buffer/: buffer_view.rs  index.rs  instance.rs  mod.rs  vertex.rs
xrds-graphics/src/material/: mod.rs  pbr.rs  preprocessor.rs  shadow_mapping.rs
xrds-graphics/src/material/postproc/: bloom.rs  copy_swapchain.rs  deferred_lighting.rs  mod.rs  shadow_mapping.rs  sharpen.rs  taa.rs
xrds-graphics/src/material/shader/: deferred_lighting.wgsl  skinning.wgsl  view_params.wgsl
xrds-graphics/src/material/shader/common/: light_params.wgsl  skinning.wgsl  utils.wgsl  view_params.wgsl
xrds-graphics/src/material/shader/pbr/: fragment.wgsl  fragment_params.wgsl  gbuffer_params.wgsl  material_params.wgsl  shadow_mapping.wgsl  vertex.wgsl  vertex_params.wgsl  view_and_light_params.wgsl
xrds-graphics/src/material/shader/postproc/: bloom.wgsl  copy_swapchain.wgsl  deferred_lighting.wgsl  shadow_mapping.wgsl  sharpen.wgsl  simple_quad.wgsl  taa.wgsl  types.wgsl
xrds-graphics/src/object/: README.md  camera.rs  light.rs  mesh.rs  mod.rs  renderable.rs  scene.rs  world.rs
xrds-graphics/src/object/entity/: camera.rs  light.rs  mesh.rs  mod.rs  transform.rs
xrds-graphics/src/object/visitor/: camera_finder.rs  mod.rs  primitive_collector.rs
xrds-graphics/src/renderer/: command_encoder.rs  framebuffer.rs  gbuffer.rs  mod.rs  render_pass.rs
xrds-graphics/src/system/: constant.rs  helper.rs  mod.rs  transform_system.rs
xrds-graphics/src/system/camera_system/: camera_data.rs  camera_info.rs  camera_instance.rs  mod.rs
xrds-graphics/src/system/light_system/: light_instance.rs  mod.rs  shadowmap_pool.rs  shadowmaps.rs
xrds-graphics/src/system/render_system/: framebuffer.rs  gbuffer.rs  mod.rs
xrds-graphics/src/texture/: format.rs  mod.rs  render_target.rs
xrds-graphics/src/window/: surface.rs
xrds-interface/: CMakeLists.txt  README.md
xrds-interface/src/: main.cpp
xrds-net/: CMakeLists.txt  Cargo.toml  README.md  build.rs
xrds-net/src/: lib.rs
xrds-net/src/client/: client.rs  mod.rs  tests.rs  xrds_webrtc.rs  xrds_websocket.rs
xrds-net/src/client/xrds_webrtc/: img2vid_encoder.rs  webcam_reader.rs  webrtc_client.rs
xrds-net/src/client/xrds_webrtc/media/: audio_capturer.rs  handlers.rs  streaming_mp4_writer.rs
xrds-net/src/client/xrds_webrtc/media/transcoding/: img2vid_encoder.rs  jpeg2h264.rs  pcm2opus.rs
xrds-net/src/client/xrds_webrtc/transcoding/: img2vid_encoder.rs  jpeg2h264.rs
xrds-net/src/common/: data_structure.rs  enums.rs  mod.rs  tests.rs
xrds-net/src/server/: mod.rs  server.rs  tests.rs  webrtc_server.rs  ws_server.rs
xrds-net/test/: mod.rs
xrds-net/test_root_dir/: README.md
xrds-openxr/: Cargo.toml  README.md  build.rs
xrds-openxr/include/xrds/: openxr.h
xrds-openxr/lib/: CMakeLists.txt
xrds-openxr/lib/src/: openxr-wrapper.cpp  openxr-wrapper.h
xrds-openxr/openxr/: CMakeLists.txt
xrds-openxr/openxr/src/: openxr.cpp  openxr.h
xrds-openxr/src/: error.rs  lib.rs  main.rs  openxr.rs
xrds-openxr/src/openxr/: context.rs  hmd.rs  mod.rs  types.rs
xrds-openxr/src/openxr/api/: mod.rs  vulkan.rs
xrds-runtime/: CMakeLists.txt  Cargo.toml  build.rs
xrds-runtime/src/: application.rs  context.rs  error.rs  event.rs  lib.rs  object.rs  runtime.rs  runtime_builder.rs  world.rs
xrds/include/xrds/: core.hpp  xrds.h  xrds.hpp
xrds/src/: lib.rs
xrds/src/api/: core.rs  mod.rs  net.rs  runtime.rs
xrds/src/api/ffi/: net.rs  runtime.rs
xrds/src/runtime/: builder.rs
(+29 files in other folders)
