cmake_minimum_required(VERSION 3.25)

project(OpenXRDS)

configure_file(${CMAKE_SOURCE_DIR}/.cargo/config.toml.in ${CMAKE_SOURCE_DIR}/.cargo/config.toml @ONLY)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/output/debug)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/output/debug)
set(CMAKE_PDB_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/output/debug)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/output/release)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/output/release)
set(CMAKE_PDB_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/output/release)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_BINARY_DIR}/output/minsizerel)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_BINARY_DIR}/output/minsizerel)
set(CMAKE_PDB_OUTPUT_DIRECTORY_MINSIZEREL ${CMAKE_BINARY_DIR}/output/minsizerel)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR}/output/relwithdebinfo)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR}/output/relwithdebinfo)
set(CMAKE_PDB_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_BINARY_DIR}/output/relwithdebinfo)

message(STATUS "CMAKE_BINARY_DIR: ${CMAKE_BINARY_DIR}")

add_subdirectory(xrds-core)
add_subdirectory(xrds-interface)
add_subdirectory(xrds-openxr)