[package]
name = "xrds"
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
keywords = ["XR"]
repository = "https://github.com/OpenXRDS/DeviceSDK"
homepage = "https://github.com/OpenXRDS"
authors = ["OpenXRDS developers"]

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies.xrds-audio]
package = "xrds-audio"
path = "./crates/xrds-audio"

[workspace.dependencies.xrds-components]
package = "xrds-components"
path = "./crates/xrds-components"

[workspace.dependencies.xrds-core]
package = "xrds-core"
path = "./crates/xrds-core"

[workspace.dependencies.xrds-graphics]
package = "xrds-graphics"
path = "./crates/xrds-graphics"

[workspace.dependencies.xrds-net]
package = "xrds-net"
path = "./crates/xrds-net"

[workspace.dependencies.xrds-openxr]
package = "xrds-openxr"
path = "./crates/xrds-openxr"

[workspace.dependencies.xrds-runtime]
package = "xrds-runtime"
path = "./crates/xrds-runtime"

[workspace.dependencies.xrds-internal]
package = "xrds-internal"
path = "./crates/xrds-internal"

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread", "sync", "macros"] }
anyhow = "1.0.95"
env_logger = "0.11.6"
log = "0.4.25"
bevy = { version = "0.17.2", features = ["jpeg"] }
wgpu = { version = "26.0.1", default-features = false, features = ["wgsl"] }
wgpu-hal = { version = "26.0.1" }
ash = "0.38.0"
glam = { version = "0.29.2", features = ["bytemuck"] }

[target.'cfg(windows)'.dependencies]
winreg = { version = "0.55.0" }

[dependencies]
xrds-internal = { workspace = true }

[dev-dependencies]
bevy = { workspace = true }
wgpu = { workspace = true }
rand = { version = "0.9.2" }
