[package]
name = "xrds-graphics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
xrds-core = { workspace = true }
anyhow = { workspace = true }
wgpu = { workspace = true }
glam = { workspace = true }

[dev-dependencies]
log = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true }
