[package]
name = "xrds-graphics"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
material_spec_gloss = []
material_ibl = []

[dependencies]
xrds-core = { workspace = true }
anyhow = { workspace = true }
wgpu = { workspace = true }
wgpu-hal = { workspace = true }
naga_oil = { workspace = true }
glam = { workspace = true }
ash = { workspace = true }
regex = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
rustc-hash = { workspace = true }
image = { workspace = true }
rayon = { workspace = true }
gltf = { workspace = true }
uuid = { workspace = true }
percent-encoding = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
