[package]
name = "xrds-net"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
tokio = {version = "^1.32", features = ["full", "test-util"]}
tokio-tungstenite="*"
url="2.5.4" 
mio="1.0.3"
random-string="1.1.0"                                   # for scid (QUIC)
uuid="1.15.1"                                           # uuid
base64="0.22.1"
serde_json="1.0.139"
serde="1.0.218"
async-trait="0.1.86"
futures="0.3.31"
futures-util = "0.3"
anyhow="1.0.97"

curl="0.4.47"                                           # http / https
coap="0.19.1"                                           # coap
coap-lite = "0.11.3"                                    # coap
websocket="0.27.1"                                      # websocket / wss
suppaftp={ version = "^6", features=["native-tls"] }    # ftp / sftp
rumqttc="0.24.0"                                        # mqtt
quiche="0.22.0"                                         # quic / http3
webrtc="0.12.0"                                         # webRTC
rustls = { version = "0.23.10", default-features = false, features = ["std", "ring"] }  #tls
once_cell="1.20"

libunftp = "0.20.3"                                     # ftp server
unftp-sbe-fs = "0.2.0"                                  # ftp server