[package]
name = "xrds-net"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
tokio = {version = "^1.32", features = ["full", "test-util"]}
tokio-tungstenite="*"
url="2.5.4" 
mio="1.0.3"
random-string="1.1.0"                                   # for scid (QUIC)
uuid="1.15.1"                                           # uuid
base64="0.22.1"
serde_json="1.0.139"
serde="1.0.218"
async-trait="0.1.86"
futures="0.3.31"
futures-util = "0.3"
anyhow="1.0.97"
bytes = "1"
log="0.4.28"
pretty_env_logger="0.5.0"

curl="0.4.47"                                           # http / https
coap="0.19.1"                                           # coap
coap-lite = "0.11.3"                                    # coap
websocket="0.27.1"                                      # websocket / wss
suppaftp={ version = "^6", features=["native-tls"] }    # ftp / sftp
rumqttc="0.24.0"                                        # mqtt
quiche="0.24.6"                                         # quic / http3
webrtc="0.12.0"                                         # webRTC
image = { version = "0.25"}
ffmpeg-next = "8.0.0"                                     # video processing

rustls = { version = "0.23.10", default-features = false, features = ["std", "ring"] }  #tls
once_cell="1.20"

libunftp = "0.20.3"                                   # ftp server
unftp-sbe-fs = "0.2.0"                                # ftp server

cpal="=0.14.0"                                        # audio input / output
opus="0.3.0"                                          # audio codec
ogg="0.8"                                            # audio container
rand="0.8"                                          # random number generation
chrono = "0.4.42"                                   # date and time

# Image and Video Capture via Camera
[dependencies.nokhwa]
version="0.10.7"
default-features = false
features = ["input-native", "output-threaded"]

[dev-dependencies]
serial_test="3.0"

[build-dependencies]
vcpkg="0.2.15"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_Media_MediaFoundation"] }