[package]
name = "xrds-openxr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
xrds-graphics = { workspace = true }
openxr = { workspace = true }
wgpu = { workspace = true }
wgpu-hal = { workspace = true }
anyhow = { workspace = true }
ash = { workspace = true }
log = { workspace = true }
