[package]
name = "xrds-runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[features]
preview = []

[dependencies]
xrds-core = { workspace = true }
xrds-net = { workspace = true }
xrds-audio = { workspace = true }
xrds-graphics = { workspace = true }
xrds-components = { workspace = true }
xrds-openxr = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
winit = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
wgpu-types = { workspace = true }

[target.'cfg(android)'.dependencies]
winit = { version = "0.30.9", features = ["android-game-activity"] }
