[package]
name = "xrds"
version = "0.1.0"
edition = "2021"

[dependencies]
xrds-audio = { path = "../xrds-audio" }
xrds-components = { path = "../xrds-components" }
xrds-core = { path = "../xrds-core" }
xrds-graphics = { path = "../xrds-graphics" }
xrds-net = { path = "../xrds-net" }
xrds-runtime = { path = "../xrds-runtime" }
