[package]
name = "xrds"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
audio = []     # Enable audio core api
component = [] # Enable component core api
graphics = []  # Enable graphics core api
net = []       # Enable net core api
runtime = []   # Enable runtime core api
core = []      # Enable core api

full = ["audio", "component", "graphics", "net", "runtime", "core"]

[dependencies]
xrds-audio = { path = "../xrds-audio" }
xrds-components = { path = "../xrds-components" }
xrds-core = { path = "../xrds-core" }
xrds-graphics = { path = "../xrds-graphics" }
xrds-net = { path = "../xrds-net" }
xrds-runtime = { path = "../xrds-runtime" }
anyhow = { workspace = true }

[build-dependencies]
cbindgen = "0.27.0"
